<?xml version="1.0" encoding="utf-8"?>
<!-- This file is /res/menu/mainmenu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
<item android:id="@+id/menu_btPair"
android:title="@string/menu_btPair_title"
android:icon="@drawable/ic_action_bluetooth"
android:showAsAction="always"
/>

<item android:id="@+id/menu_prefs"
android:title="@string/menu_prefs_title"
    android:icon="@drawable/ic_action_settings"
    android:showAsAction="always"
/>

<item android:id="@+id/overlay_help"
android:title="@string/overlaymenu_instructions_title"
android:icon="@drawable/ic_menu_database"
/>

<item android:id="@+id/menu_instructions"
android:title="@string/menu_instructions_title"
android:icon="@drawable/ic_menu_database"
/>

<item android:id="@+id/bluetoothMenu_instructions"
android:title="@string/bluetoothMenu_instructions_title"
android:icon="@drawable/ic_menu_database"
/>

<item android:id="@+id/menu_about"
android:title="@string/menu_about_title"
android:icon="@drawable/ic_menu_info_details"
/>



</menu>
