<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.larswerkman.demo.holocolorpicker"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <EditText
        android:id="@+id/textField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/defaultText" />

	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/seekbar_label"
	    />

	<SeekBar
		android:id="@+id/SeekBar"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:max="10"
		android:progress="1"
		/>
	

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="1px">

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="Font:"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<Spinner
		    android:id="@+id/fontSpinner"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:prompt="@string/fontSpinner_title"
		     />

	</LinearLayout>
	
	  <Button android:text="WRITE" android:id="@+id/writeButton" android:background="@drawable/red_btn_selector" style="@style/ButtonText"></Button>

	  <com.larswerkman.holocolorpicker.ColorPicker
	      android:id="@+id/picker"
	      android:layout_width="wrap_content"
	      android:layout_height="305dp"
	      android:layout_gravity="center" />
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >
 
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Color"
            android:visibility="gone"
            android:layout_weight="1" />
 
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Text Color"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="gone"
            android:layout_weight="1" />
 
    </LinearLayout>



</LinearLayout>